fix stapel thumb alignment

--- a/_src/sass/stapel/index.scss
+++ b/_src/sass/stapel/index.scss
@@ -2,6 +2,7 @@
 
 .topbar {
   padding: 0;
+  padding-left: 15px;
   box-shadow: none;
   min-height: 76px;
   margin-top: 40px;
@@ -11,4 +12,7 @@
   h3 {
     margin: 10px 0;
   }
+}
+.wrapper {
+  margin: 0 -15px;
 }
