--- a/_src/sass/stapel/stapel.scss
+++ b/_src/sass/stapel/stapel.scss
@@ -30,6 +30,12 @@
 .tp-grid li a {
 	display: block;
 	outline: none;
+	width: 320px;
+	height: 200px;
+	img {
+		width: 100%;
+		height: auto;
+	}
 }
 
 .tp-grid li img {
